# python-scripts

./: create.sh  ruff.toml
amtrak/: Makefile  main.py  pyproject.toml
amtrak/src/amtrak/: __init__.py  process.py  search.py
amtrak/src/amtrak/models/: journey.py
images/: Makefile  pyproject.toml
images/src/images/: __init__.py  fix_names.py
template/: Makefile  pyproject.toml
