[project]
name = "amtrak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wishcle", email = "cpmqaq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.12.11",
    "ty>=0.0.1a20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amtrak"]

[project.scripts]
main = "amtrak:main"
