[project]
name = "amtrak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wishcle", email = "cpmqaq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.12.11",
    "selenium>=4.35.0",
    "ty>=0.0.1a20",
    "undetected-geckodriver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amtrak"]

[tool.uv.sources]
undetected-geckodriver = { git = "https://github.com/Wishcle/undetected_geckodriver", rev = "main" }

[project.scripts]
main = "amtrak:main"
