[project]
name = "amtrak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wishcle", email = "cpmqaq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.35.0",
    "undetected-chromedriver>=3.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amtrak"]

[project.scripts]
main = "amtrak:main"
