[project]
name = "images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wishcle", email = "cpmqaq@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.11.9",
    "ty>=0.0.1a2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/images"]

[project.scripts]
main = "images:main"
